[package]
name = "rigil-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", default-features = false, features = ["client", "server", "http1", "http2", "runtime"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
